# DFPlugins

./: !new.ps1  !rebuild.ps1  .gitignore  README.md  format_all.ps1  remove_sig.ps1
cmake/: DFPE.CMakeLists.txt  vcpkg.json.in
common/: !update.ps1  CMakeLists.txt  CMakePresets.json  vcpkg.json
common/cmake/: config.cmake.in
common/include/DFPE/: Interfaces.h  PluginAPI.h  Prefix.h  Process.h
common/include/DKUtil/: Config.hpp  Hook.hpp  Logger.hpp  README.md  Utility.hpp
common/include/DKUtil/Impl/Config/: Schema.hpp  Shared.hpp
common/include/DKUtil/Impl/Hook/: API.hpp  Internal.hpp  Shared.hpp  Trampoline.hpp
common/include/RE/: Offsets.inl  Relocation.h  Versions.inl
common/test/: PCH.h  StaticRun.cpp
dfpe/: CMakeLists.txt  README.md  vcpkg.json
dfpe/cmake/: Plugin.h.in
dfpe/src/: Entry.cpp  Hooks.cpp  Hooks.h  Interfaces.cpp  Interfaces.h  PCH.h  PluginManager.cpp  PluginManager.h
loader/: CMakeLists.txt  README.md  vcpkg.json
loader/cmake/: Plugin.h.in
loader/src/: Config.cpp  Config.h  Inject.cpp  Inject.h  Loader.cpp  PCH.h
template/: CMakeLists.txt  vcpkg.json
template/src/: PCH.h  main.cpp
translation_extender/: CMakeLists.txt  README.md  vcpkg.json
translation_extender/src/: Config.cpp  Config.h  Entry.cpp  Hooks.cpp  Hooks.h  PCH.h
translation_extender/src/Localization/: API.cpp  API.h  Context.cpp  Context.h  Schema.cpp  Schema.h
translation_extender/src/SDL/: Formatter.cpp  Formatter.h  Renderer.cpp  Renderer.h  SDL.inl
